--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nuxt": "^3.9.0",
     "vue": "^3.3.13",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "pixi.js": "^7.3.2"
   }
 }
